reformate blog brr  module

--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -1,268 +1,298 @@
-
-  <div class="list-container">
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail1.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views &bull; 2 days</p>
-        </div>
+<div class="list-container">
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail1.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
       </div>
     </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail2.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail3.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views &bull;  2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail4.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail5.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail6.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views &bull;  2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail7.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail8.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail9.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail10.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail11.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail12.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail13.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail14.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail15.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail16.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail17.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail18.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail19.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail20.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="vid-list">
-      <a href=""><img src="assets/images/thumbnail21.png" class="thumbnail"></a>
-      <div class="flex-div">
-        <img src="assets/images/Jack.png">
-        <div class="vid-info">
-          <a href="">Best Channel to learn coding that help you to be a web developer</a>
-          <p>Easy Tutorial</p>
-          <p>15k views  &bull; 2 days</p>
-        </div>
-      </div>
-    </div>
-
   </div>
 
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail2.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
 
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail3.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
 
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail4.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
 
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail5.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
 
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail6.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
 
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail7.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
 
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail8.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
 
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail9.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
 
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail10.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail11.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail12.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail13.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail14.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail15.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail16.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail17.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail18.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail19.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail20.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="vid-list">
+    <a href=""><img src="assets/images/thumbnail21.png" class="thumbnail" /></a>
+    <div class="flex-div">
+      <img src="assets/images/Jack.png" />
+      <div class="vid-info">
+        <a href=""
+          >Best Channel to learn coding that help you to be a web developer</a
+        >
+        <p>Easy Tutorial</p>
+        <p>15k views &bull; 2 days</p>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!--
 <div class="album py-5 bg-info">
