--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 
 <div class="list-container">
-  <div class="vid-list">
+
+  <div class="vid-list" *ngFor="let file of [].constructor(10); let r = index">
     <a href=""><img src="assets/images/thumbnail1.png" class="thumbnail" alt="Thumbnail"/></a>
     <div class="flex-div">
       <img src="assets/images/Jack.png" alt="profile pic" />
