--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -6,9 +6,7 @@
     <div class="flex-div">
 
       <div class="vid-info">
-        <a href=""
-          >Best Channel to learn coding that help you to be a web developer</a
-        >
+        <a href="">Best Channel to learn coding that help you to be a web developer</a>
         
       </div>
     </div>
