--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -1,13 +1,14 @@
-<div class="list-container">
+<div>
+  <div class="list-container">
+    <div class="vid-list" *ngFor="let video of videos">
+      <img src="{{'https://img.youtube.com/vi/' + video.videoID+'/0.jpg'}}" class="thumbnail" alt="Thumbnail" />
+      <div class="flex-div">
 
-  <div class="vid-list" *ngFor="let video of videos">
-    <img src="../../assets/images/cameron.png" class="thumbnail" alt="Thumbnail" />
-    <div class="flex-div">
+        <div class="vid-info">
+          <a href="">{{video.videoTitle}}</a>
 
-      <div class="vid-info">
-        <a href="">{{video.videoTitle}}</a>
-
+        </div>
       </div>
     </div>
-    <h1>Ji</h1>
   </div>
+</div>
