historical commit in our spl2 project al hamdulillah

--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -5,7 +5,7 @@
       <div class="flex-div">
 
         <div class="vid-info">
-          <a href="">{{video.videoTitle}}</a>
+          <a href="" routerLink="blogView">{{video.videoTitle}}</a>
 
         </div>
       </div>
