put fav data list

--- a/BlogBee/src/app/navbar/navbar.component.html
+++ b/BlogBee/src/app/navbar/navbar.component.html
@@ -12,14 +12,14 @@
     <div class="search-box flex-div">
       <input type="text" placeholder="Search" />
       <img src="assets/images/search.png" alt="" />
-      <!--img src="assets/images/voice-search.png" class="mic-icon" alt=""> -->
+      <!-- <button class="btn btn-primary">search</button> -->
     </div>
   </div>
 
   <div class="nav-right flex-div">
     <button routerLink="signin">Sign in</button>
     <button routerLink="signup">Sign up</button>
-    <img src="assets/images/Jack.png" class="user-icon" alt="User-Icon" />
+    <img src="assets/images/r.png" class="user-icon" alt="User-Icon" />
   </div>
 </nav>
 
@@ -30,7 +30,7 @@
       ><img src="assets/images/home.png" />
       <p>Home</p></a
     >
-    <a href="#"
+    <a href="#" routerLink="favList"
       ><img src="assets/images/favicon.png" />
       <p>Favourite List</p></a
     >
