Add fav list card

--- a/BlogBee/src/app/favourite-list/favourite-list.component.html
+++ b/BlogBee/src/app/favourite-list/favourite-list.component.html
@@ -6,3 +6,31 @@
       <a href="#" class="btn btn-primary">Remove from Favourite List</a>
     </div>
   </div>
+
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="{{'https://img.youtube.com/vi/' + favVideoTwo.videoID+'/0.jpg'}}" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">{{favVideoTwo.videoTitle}}</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Remove from Favourite List</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="{{'https://img.youtube.com/vi/' + favVideoThree.videoID+'/0.jpg'}}" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">{{favVideoThree.videoTitle}}</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Remove from Favourite List</a>
+    </div>
+  </div>
+  
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="{{'https://img.youtube.com/vi/' + favVideoFive.videoID+'/0.jpg'}}" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">{{favVideoFive.videoTitle}}</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Remove from Favourite List</a>
+    </div>
+  </div>
+  
