--- a/BlogBee/src/app/signup/signup.component.html
+++ b/BlogBee/src/app/signup/signup.component.html
@@ -1,104 +1,44 @@
-<section class="vh-100" style="background-color: #eee">
-  <div class="container h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-lg-12 col-xl-11">
-        <div class="card text-black" style="border-radius: 25px">
-          <div class="card-body p-md-5">
-            <div class="row justify-content-center">
-              <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">
-                  Sign up
-                </p>
-
-                <form class="mx-1 mx-md-4">
-                  <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-
-                      <input
-                        type="text"
-                        id="form3Example1c"
-                        class="form-control"
-                        required
-                        [(ngModel)] = "userData.userName" [ngModelOptions]="{standalone: true}"
-                      />
-                      <label class="form-label" for="form3Example1c"
-                        >User Name</label
-                      >
-                    </div>
-                  </div>
-
-                  <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-
-                      <input
-                        type="email"
-                        id="form3Example3c"
-                        class="form-control"
-                        required
-                        [(ngModel)] = "userData.email" [ngModelOptions]="{standalone: true}"
-                      />
-                      <label class="form-label" for="form3Example3c"
-                        >Email</label
-                      >
-                    </div>
-                  </div>
-
-                  <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-
-                      <input
-                        type="password"
-                        id="form3Example4c"
-                        class="form-control"
-                        required
-                        [(ngModel)] = "userData.password" [ngModelOptions]="{standalone: true}"
-                      />
-                      <label class="form-label" for="form3Example4c"
-                        >Password</label
-                      >
-                    </div>
-                  </div>
-
-                  <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-
-                      <input
-                        type="password"
-                        id="form3Example4cd"
-                        class="form-control"
-                        required
-                        [(ngModel)] = "userData.rpassword" [ngModelOptions]="{standalone: true}"
-                      />
-                      <label class="form-label" for="form3Example4cd"
-                        >Repeat password</label
-                      >
-                    </div>
-                  </div>
-
-                  <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <input type="submit" class="btn btn-primary" (click)="signUpButtonAction()">
-            
-                  </div>
-                </form>
+<div class="container">
+  <section>				
+      <div id="container_demo" >
+         
+          <div id="wrapper">
+              <div id="login" class="animate form">
+                <form  action="mysuperscript.php" autocomplete="on"> 
+                  <h1> Sign up </h1> 
+                  <p> 
+                      <label for="usernamesignup" class="uname" data-icon="u">Your username</label>
+                      <input id="usernamesignup" name="usernamesignup" required="required" type="text" placeholder="mysuperusername690" />
+                  </p>
+                  <p> 
+                      <label for="emailsignup" class="youmail" data-icon="e" > Your email</label>
+                      <input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="mysupermail@mail.com"/> 
+                  </p>
+                  <p> 
+                      <label for="passwordsignup" class="youpasswd" data-icon="p">Your password </label>
+                      <input id="passwordsignup" name="passwordsignup" required="required" type="password" placeholder="eg. X8df!90EO"/>
+                  </p>
+                  <p> 
+                      <label for="passwordsignup_confirm" class="youpasswd" data-icon="p">Please confirm your password </label>
+                      <input id="passwordsignup_confirm" name="passwordsignup_confirm" required="required" type="password" placeholder="eg. X8df!90EO"/>
+                  </p>
+                  <p class="signin button"> 
+    <input type="submit" value="Sign up"/> 
+  </p>
+                  <p class="change_link">  
+    Already a member ?
+    <a href="#tologin" class="to_register"> Go and log in </a>
+  </p>
+              </form>
               </div>
-              <div
-                class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2"
-              >
-                <img
-                  src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                  class="img-fluid"
-                  alt="Sample image"
-                />
+
+              
+
+              <div id="register" class="animate form">
+                  
               </div>
-            </div>
+  
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
+      </div>  
+  </section>
+</div>
