--- a/BlogBee/src/app/app.component.css
+++ b/BlogBee/src/app/app.component.css
@@ -1,6 +1,6 @@
-.container{
+.container1{
     background: #f9f9f9;
-    padding-left: 12%;
+    padding-left: 16%;
     padding-right: 2%;
     padding-top: 20px;
     padding-bottom: 20px;
