--- a/BlogBee/src/app/sign-in/sign-in.component.html
+++ b/BlogBee/src/app/sign-in/sign-in.component.html
@@ -39,7 +39,7 @@
           </div>
           <div id="emailHelp" class="form-text text-center mb-5 text-dark">
             Not Registered?
-            <a href="#" class="text-dark fw-bold"> Create an Account</a>
+            <a href="" routerLink="signup" class="text-dark fw-bold"> Create an Account</a>
           </div>
         </form>
       </div>
