--- a/BlogBee/src/app/signup/signup.component.html
+++ b/BlogBee/src/app/signup/signup.component.html
@@ -1,44 +1,50 @@
 <div class="container">
-  <section>				
-      <div id="container_demo" >
-         
-          <div id="wrapper">
-              <div id="login" class="animate form">
-                <form  action="mysuperscript.php" autocomplete="on"> 
-                  <h1> Sign up </h1> 
-                  <p> 
-                      <label for="usernamesignup" class="uname" data-icon="u">Your username</label>
-                      <input id="usernamesignup" name="usernamesignup" required="required" type="text" placeholder="mysuperusername690" />
-                  </p>
-                  <p> 
-                      <label for="emailsignup" class="youmail" data-icon="e" > Your email</label>
-                      <input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="mysupermail@mail.com"/> 
-                  </p>
-                  <p> 
-                      <label for="passwordsignup" class="youpasswd" data-icon="p">Your password </label>
-                      <input id="passwordsignup" name="passwordsignup" required="required" type="password" placeholder="eg. X8df!90EO"/>
-                  </p>
-                  <p> 
-                      <label for="passwordsignup_confirm" class="youpasswd" data-icon="p">Please confirm your password </label>
-                      <input id="passwordsignup_confirm" name="passwordsignup_confirm" required="required" type="password" placeholder="eg. X8df!90EO"/>
-                  </p>
-                  <p class="signin button"> 
-    <input type="submit" value="Sign up"/> 
-  </p>
-                  <p class="change_link">  
-    Already a member ?
-    <a href="#tologin" class="to_register"> Go and log in </a>
-  </p>
-              </form>
-              </div>
+    <section>				
+        <div id="container_demo" >
+            <div id="wrapper">
+                <div id="login" class="animate form">
+                    <form  action="mysuperscript.php" autocomplete="on"> 
+                    <h1> Sign up </h1> 
+                        <p> 
+                            <label for="usernamesignup" class="uname" data-icon="u">Your username</label>
+                            <input id="usernamesignup" name="usernamesignup"
+                            [(ngModel)] = "userData.userName" [ngModelOptions]="{standalone: true}"
+                            required="required" type="text" placeholder="mysuperusername690" />
+                        </p>
+                        <p> 
+                            <label for="emailsignup" class="youmail" data-icon="e" > Your email</label>
+                            <input id="emailsignup" name="emailsignup" 
+                            [(ngModel)] = "userData.email" [ngModelOptions]="{standalone: true}"
+                            required="required" type="email" placeholder="mysupermail@mail.com"/> 
+                        </p>
+                        <p> 
+                            <label for="passwordsignup" class="youpasswd" data-icon="p">Your password </label>
+                            <input id="passwordsignup" name="passwordsignup" 
+                            [(ngModel)] = "userData.password" [ngModelOptions]="{standalone: true}"
+                            required="required" type="password" placeholder="eg. X8df!90EO"/>
+                        </p>
+                        <p> 
+                            <label for="passwordsignup_confirm" class="youpasswd" data-icon="p">Please confirm your password </label>
+                            <input id="passwordsignup_confirm" name="passwordsignup_confirm"
+                            [(ngModel)] = "userData.rpassword" [ngModelOptions]="{standalone: true}"
+                            required="required" type="password" placeholder="eg. X8df!90EO"/>
+                        </p>
+                        <span *ngIF="mismatch" style="color:red">Password Mismatch</span> 
+                        <p class="signin button"> 
+                            <button type="submit" (click)="signUpButtonAction()">Sign up</button>
+                        </p>
+                        <p class="change_link">  
+                            Already a member ?
+                            <button type="button" (click)="signin()" class="to_register"> Sign in </button>
+                        </p>
+                     </form>
+                </div>
 
-              
-
-              <div id="register" class="animate form">
+            <div id="register" class="animate form">
                   
-              </div>
+        </div>
   
-          </div>
-      </div>  
-  </section>
+    </div>
+</div>  
+</section>
 </div>
