--- a/BlogBee/src/app/navbar/navbar.component.html
+++ b/BlogBee/src/app/navbar/navbar.component.html
@@ -5,7 +5,8 @@
       class="menu-icon"
       (click)="menuButtonClickEvent()"
     />
-    <img src="assets/images/logo.png" class="logo" alt="" />
+    <a href="#"> <img src="assets/images/logo.png" class="logo" alt="" /> </a>
+    
   </div>
 
   <div class="nav-middle flex-div">
