add  all thumblines and images

--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -5,7 +5,8 @@
       <div class="flex-div">
 
         <div class="vid-info">
-          <a href="" routerLink="blogView">{{video.videoTitle}}</a>
+          <!--<a href="" routerLink="blogView">{{video.videoTitle}}</a>-->
+          <p>{{video.videoTitle}}</p>
         </div>
       </div>
     </div>
