--- a/BlogBee/src/app/blog-view/blog-view.component.html
+++ b/BlogBee/src/app/blog-view/blog-view.component.html
@@ -1,4 +1,5 @@
 <h1>Biomedicine: Crash Course History of Science #34</h1>
+<p>tag</p>
 
 <p>{{getBlog.text+extraBlog.text+getBlog.text+extraBlog.text+getBlog.text+extraBlog.text+getBlog.text+extraBlog.text}}</p>
 
