convert text to link

--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -5,8 +5,7 @@
       <div class="flex-div">
 
         <div class="vid-info">
-          <!--<a href="" routerLink="blogView">{{video.videoTitle}}</a>-->
-          <p>{{video.videoTitle}}</p>
+          <a href="" routerLink="blogView">{{video.videoTitle}}</a>
         </div>
       </div>
     </div>
