--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -5,7 +5,7 @@
       <div class="flex-div">
 
         <div class="vid-info">
-          <a href="" (click)="compileVideoToText(video.videoID)">{{video.videoTitle}}</a>
+          <a href="" (click)="compileVideoToText(video)">{{video.videoTitle}}</a>
         </div>
       </div>
     </div>
