--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -1,15 +1,18 @@
 <div>
   <div class="list-container">
     <div class="vid-list" *ngFor="let video of videos">
-      <img src="{{'https://img.youtube.com/vi/' + video.videoID+'/0.jpg'}}" routerLink="blogView" class="thumbnail" alt="Thumbnail" />
+      <img
+        src="{{ 'https://img.youtube.com/vi/' + video.videoID + '/0.jpg' }}"
+        routerLink="blogView"
+        class="thumbnail"
+        alt="Thumbnail"
+      />
       <div class="flex-div">
-
         <div class="vid-info">
-         <a href="" (click)="compileVideoToText(video.videoID)">{{video.videoTitle}}</a>
-          <!--<a href="" routerLink="blogView" >{{video.videoTitle}}</a>-->
-
-
-          
+         <p (click)="compileVideoToText(video.videoID)">{{
+            video.videoTitle
+          }}</p>
+          <!-- <a href="" routerLink="blogView" >{{video.videoTitle}}</a> -->
         </div>
       </div>
     </div>
