--- a/BlogBee/src/app/favourite-list/favourite-list.component.html
+++ b/BlogBee/src/app/favourite-list/favourite-list.component.html
@@ -1,11 +1,11 @@
 <div>
   <div class="list-container">
     <div class="vid-list" *ngFor="let video of favVideo">
-      <img src="{{'https://img.youtube.com/vi/' + video.videoID+'/0.jpg'}}" routerLink="blogView" class="thumbnail" alt="Thumbnail" />
+      <img src="{{'https://img.youtube.com/vi/' + video.videoId+'/0.jpg'}}" routerLink="blogView" class="thumbnail" alt="Thumbnail" />
       <div class="flex-div">
 
         <div class="vid-info">
-          <a href="" routerLink="blogView">{{video.videoTitle}}</a>
+          <a href="" routerLink="blogView">{{video.title}}</a>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <a href="#" class="btn btn-primary">Remove</a> -->
         </div>
@@ -25,5 +25,3 @@
       <a href="#" class="btn btn-primary">Remove from Favourite List</a>
     </div>
   </div> -->
-
- 
