--- a/BlogBee/src/app/sign-in/sign-in.component.html
+++ b/BlogBee/src/app/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3">
       <h2 class="text-center text-dark mt-5">Welcome to BlogBee</h2>
@@ -46,5 +46,28 @@
         </form>
       </div>
     </div>
+  </div>
+</div> -->
+
+<div class="wrapper">
+  <div class="logo">
+    <img src="\assets\images\user.png" alt="">
+  </div>
+  <div class="text-center mt-4 name">
+      BlogBee
+  </div>
+  <form class="p-3 mt-3">
+      <div class="form-field d-flex align-items-center">
+          <span class="far fa-user"></span>
+          <input type="text" name="userName" id="userName" placeholder="Username/Email">
+      </div>
+      <div class="form-field d-flex align-items-center">
+          <span class="fas fa-key"></span>
+          <input type="password" name="password" id="pwd" placeholder="Password">
+      </div>
+      <button class="btn mt-3">Login</button>
+  </form>
+  <div class="text-center fs-6">
+      <a href="#">Forget password?</a> or <a routerLink="signup">Sign up</a>
   </div>
 </div>
