--- a/BlogBee/src/app/videos/videos.component.html
+++ b/BlogBee/src/app/videos/videos.component.html
@@ -3,13 +3,13 @@
 <div class="container">
     <div *ngFor="let video of videos">
         <div class="col-md-3">
-            {{video.videoID}}
+            {{video.videoId}}
         </div>
         <div class="col-md-3">
-            {{video.videoTitle}}
+            {{video.title}}
         </div>
         <div class="col-md-3">
-            {{video.videoTopic}}
+            {{video.topic}}
         </div>
     </div>
 </div>
