--- a/BlogBee/src/app/blog-view/blog-view.component.html
+++ b/BlogBee/src/app/blog-view/blog-view.component.html
@@ -1,4 +1,5 @@
-<h1>{{blog.title}}</h1>
+<h1>From title{{title}}</h1>
+<h1>From Blog{{blog.title}}</h1>
 
-<p>{{blog.text}}</p>
+<p>p1{{text}}</p>
 
