--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -1,11 +1,11 @@
 <div>
   <div class="list-container">
     <div class="vid-list" *ngFor="let video of videos">
-      <img src="{{'https://img.youtube.com/vi/' + video.videoId+'/0.jpg'}}" (click)="showBlog(video.videoId)" class="thumbnail" alt="Thumbnail" />
+      <img src="{{'https://img.youtube.com/vi/' + video.videoId+'/0.jpg'}}" (click)="showBlog(video)" class="thumbnail" alt="Thumbnail" />
       <div class="flex-div">
 
         <div class="vid-info">
-          <u><p (click)="showBlog(video.videoId)">{{video.title}}</p></u>
+          <u><p (click)="showBlog(video)">{{video.title}}</p></u>
           <!--<a href="" routerLink="blogView" >{{video.title}}</a>-->
         </div>
         
