--- a/BlogBee/src/app/blog-view/blog-view.component.html
+++ b/BlogBee/src/app/blog-view/blog-view.component.html
@@ -1,5 +1,4 @@
-<h1>From title{{title}}</h1>
-<h1>From Blog{{blog.title}}</h1>
+<h1>{{blog[0].title}}</h1>
 
-<p>p1{{text}}</p>
+<p>{{blog[0].text}}</p>
 
