--- a/BlogBee/src/app/videos/videos.component.html
+++ b/BlogBee/src/app/videos/videos.component.html
@@ -9,7 +9,7 @@
             {{video.title}}
         </div>
         <div class="col-md-3">
-            {{video.topic}}
+            {{video.videoNo}}
         </div>
     </div>
 </div>
