--- a/BlogBee/src/app/blog-view/blog-view.component.html
+++ b/BlogBee/src/app/blog-view/blog-view.component.html
@@ -2,3 +2,8 @@
 
 <p *ngFor="let blog of blogs">{{blog.text}}</p>
 
+<div>
+    <button class="btn bg-primary mr-5">Favourite</button>
+    <button class="btn bg-warning ml-5">Rate</button>
+</div>
+
