--- a/BlogBee/src/app/navbar/navbar.component.html
+++ b/BlogBee/src/app/navbar/navbar.component.html
@@ -20,8 +20,8 @@
   <div class="nav-right flex-div">
     <button (click)="signin()">Sign in</button>
     <button (click)="signup()">Sign up</button>
-    <img *ngIf="!loginSuccess" src="assets/images/user.png" class="user-icon" alt="User-Icon" />
-    <img *ngIf="loginSuccess" src="assets/images/r.png" class="user-icon" alt="User-Icon" />
+    <img src="assets/images/user.png" class="user-icon" alt="User-Icon" />
+    <img src="assets/images/r.png" class="user-icon" alt="User-Icon" />
   </div>
 </nav>
 
