--- a/BlogBee/src/app/home/home.component.css
+++ b/BlogBee/src/app/home/home.component.css
@@ -2,10 +2,13 @@
  .list-container{
      display: grid;
      grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
-     grid-column-gap: 16px;
+     grid-column-gap: 40px;
      grid-row-gap: 30px;
      margin-top: 15px;
+ }
 
+ .vid-list{
+    border-radius: 15px;
  }
 
  .vid-list .thumbnail{
