--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -1,15 +1,26 @@
 <div>
   <div class="list-container">
-    <div class="vid-list" *ngFor="let video of recommendedVideos">
+    <div class="vid-list shadow p-3 mb-5 bg-white rounded" *ngFor="let video of recommendedVideos">
+      <div>
       <img src="{{'https://img.youtube.com/vi/' + video.videoId+'/0.jpg'}}" (click)="showBlog(video)" class="thumbnail" alt="Thumbnail" />
       <div class="flex-div">
-
         <div class="vid-info">
           <u><p (click)="showBlog(video)">{{video.title}}</p></u>
           <!--<a href="" routerLink="blogView" >{{video.title}}</a>-->
-        </div>
-        
+        </div> 
       </div>
     </div>
+
+    <div>
+    <div>
+      <button class="btn bg-primary mr-4">Favourite</button>
+      <button class="btn bg-warning ml-4">Rate</button>
+    </div>
+  </div>
+
+  </div>
+
   </div>
 </div>
+
+
