--- a/BlogBee/src/app/navbar/navbar.component.html
+++ b/BlogBee/src/app/navbar/navbar.component.html
@@ -18,9 +18,7 @@
   </div>
 
   <div class="nav-right flex-div">
-    <button (click)="signin()">Sign in</button>
-    <button (click)="signup()">Sign up</button>
-    <img src="assets/images/user.png" class="user-icon" alt="User-Icon" />
+    <button type="button" class="btn btn-secondary btn-lg" (click)="signin()">Sign In</button>
     <img src="assets/images/r.png" class="user-icon" alt="User-Icon" />
   </div>
 </nav>
