--- a/BlogBee/src/app/app.component.css
+++ b/BlogBee/src/app/app.component.css
@@ -1,5 +1,5 @@
 .container1{
-    background: #f9f9f9;
+    background: #dbd1d1;
     padding-left: 16%;
     padding-right: 2%;
     padding-top: 20px;
