--- a/BlogBee/src/app/home/home.component.css
+++ b/BlogBee/src/app/home/home.component.css
@@ -1,4 +1,15 @@
 
+/* .group1{
+    width: 98%;
+    height: 80%;
+}
+
+.group1{
+    width: 98%;
+    height: 15%;
+} */
+
+
  .list-container{
      display: grid;
      grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
